css/style.css
@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;700&display=swap');

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
  transition: all 0.2s ease-out;
}

:root {
  --orange: #ff4c01;
  --footer-bg: #2b2b2b;
}

::selection {
  background-color: var(--orange);
  color: #fff;
}

html,
body {
  height: 100%;
  width: 100%;
}

html {
  /* font-size: 62.5%; */
}

body {
  box-sizing: border-box;
  font-family: 'Cabin';
}



/* ^ Utilities */
/* ^ Utilities */
/* ^ Utilities */

.color-text-grey {
  color: #9b9b9b;
}

.color-text-orange {
  color: var(--orange);
}

.color-text-white {
  color: #fff;
}

.img-invert {
  filter: invert();
}

.navbar-brand img {
  width: 150px;
  margin-left: 10px;
}

.nav-link {
  font-weight: 500;
  margin-right: 10px;
}

.margin-custom-huge {
  margin-top: 100px;
}

.link-orange:hover {
  color: var(--orange) !important;
}

.text-tiny {
  font-size: 11px;
}

/* ^ ______________________________ */
/* ^ ______________________________ */
/* ^ ______________________________ */
/* ^ ______________________________ */

.hero-section {
  height: 100vh;
  /* background-size: 110%; */
  background-size: cover;
  background-image: url(../img/mainslider-bg01.jpg);
  background-position: center;
}

.hero-box {
  padding: 100px;
}

.hero-box h1 {
  color: #fff;
}

.hero-box .btn-light {
  color: var(--orange) !important;
  padding: 10px 20px;
}

.hero-box .btn-light i {
  font-size: 90%;
}

.history-section {
  padding: 50px;
}

.orange-box {
  height: 218px;
  background-size: cover;
  background-image: linear-gradient(to left, #ff4d01d6, #ff4c01d6), url(../img/single-image-08.jpg);
  background-blend-mode: multiply;
}

.pricing-section {
  padding: 50px;
}

.worker-icon {
  width: 60px;
  margin-bottom: 20px;
}

.services-section {
  background-image: linear-gradient(to left, #2a2a2a, #2a2a2a), url(../img/electric-row-bg3.jpg);
  background-blend-mode: multiply;
  /* height: 100vh; */
  padding: 50px;
}

.form-section {
  padding: 100px;
}

.col-testimonial {
  background-image: linear-gradient(to left, #ff4d01d0, #ff4c01d6), url(../img/single-image-09.jpg);
  /* background-blend-mode: multiply; */
  background-size: cover;
  background-position: top;
  /* padding: 50px; */
}

.testimonial-profile {
  display: flex;
  align-items: flex-end;
  margin: 50px 0;
}

.testimonial-user-image {
  height: 80px;
  width: 80px;
  border-radius: 50%;
  padding: 5px;
  border: 2px solid whitesmoke;
  box-sizing: content-box;
  margin-right: 20px;
}

.phone-box {
  display: flex;
  align-items: flex-end;
}

.footer {
  background-color: var(--footer-bg);
  padding: 35px 50px;
}

.footer-social-icon {
  background-color: #4f4f4f;
  font-size: 15px;
  margin: 5px;
  color: #9b9b9b;
}

.footer-top-link {
  color: #9b9b9b;
  text-decoration: none;
  font-size: 13px;
  padding: 0 10px;
  border-right: 1px solid #9b9b9b;
}

.footer-top-link:hover {
  color: var(--orange);
}

.hr-1px-grey {
  margin-top: 30px;
  height: 1px;
  background-color: #444444;
  width: 100%;
}

.quick-link {
  display: block !important;
  margin: 15px 0;
  border: none;
}

.quick-link i {
  margin-right: 10px;
}

.article-box {
  display: flex;
  align-items: center;
}

.article-thumb {
  height: 70px;
  width: 70px;
  margin-right: 15px;
}

.article-info {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

/*  */
/*  */
/*  */
/*  */
/*  */
/*  */
/*  */
/*  */
/*  */
@media (max-width: 600px) {
  .hero-box {
    padding: 10px;
    padding-top: 100px;
  }
}

